@@ -1,5 +1,6 @@
 Next release:
   - Add Xtmpl.merge_cdata
+  - Add Xtmpl.merge_cdata_list
 
 Release 0.8:
   - API change: attributes are now associated to xml tree list instead
